--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
+.nav{
+   
+ text-decoration: none;
+  padding: 10px;
+  list-style-type: none;
+  color: aliceblue;
+}
+ .nav > a {
+   margin-right: 5px;
+   font-size: 1.2rem;
+   color: rgb(24, 248, 42) !important;
+   text-decoration: none;
+ }
+ .nav > a:hover {
+  margin-right: 5px;
+  font-size: 1.2rem;
+  color: rgb(58, 250, 10) !important;
+  text-decoration: none;
+}
+ 
+ 
+
+ .nav a.active {
+background-color: red; 
+}
+.image{
+  width: 100%;
+  max-height: 430px;
+}
+.container{
+  
+  margin: 0 auto;
+  text-align: center;
+  max-width: 1024px;
+}
+
+body{
+  background-image: url('./image/gb1.gif');
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.proContainer{
+  margin: 0 auto;
+  margin-left: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+}
+.proContainer > div{
+  text-align: center;
+  background-color: aqua;
+  box-shadow: 0 0 15px aqua;
+  margin: 10px;
+  width: 300px;
+  padding-bottom: 15px;
+}
+.proContainer > div:hover{
+  text-align: center;
+  background-color: white;
+  box-shadow: 0 0 15px black;
+  margin: 10px;
+  width: 300px;
+}
+.btnChart{
+  position: relative;
+  right: -60px;
+  background-color: turquoise;
+  cursor: pointer;
+}
+.cartContainer{
+background-color: teal;
+}
+.side1{
+  max-width: 400px;
+  max-height: 500px;
 }
 
-.App-link {
-  color: #61dafb;
+.notSuccess{
+   
+  visibility:hidden !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.success {
+   
+visibility: visible !important;
 }
